--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,11 +14,33 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <form>
-      <input type="text" placeholder="Enter Message" />
-      <button>Send</button>
-    </form>
-    <ul></ul>
-    <p class="activity"></p>
+    <main>
+      <form class="form-join">
+        <input
+          type="text"
+          id="name"
+          maxlength="8"
+          placeholder="Your Name"
+          size="5"
+          required
+        />
+        <input
+          type="text"
+          id="room"
+          placeholder="Chat Room"
+          size="5"
+          required
+        />
+        <button id="join" type="submit">Join</button>
+      </form>
+      <ul class="chat-display"></ul>
+      <p class="user-list"></p>
+      <p class="room-list"></p>
+      <p class="activity"></p>
+      <form class="form-msg">
+        <input id="message" type="text" placeholder="Enter Message" required />
+        <button type="submit" id="send">Send</button>
+      </form>
+    </main>
   </body>
 </html>
